# scheduler

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test_dataset.cpp  test_dataset_with_rejection.cpp  test_performance.cpp
.github/workflows/: gtest.yml  test.yml
algo/: dp_backtracking_solution.cpp  dp_solution.cpp  naive_solution.cpp
data/20-50-0.700000-0/: input.csv
data/20-50-0.700000-1/: input.csv
data/20-50-0.700000-10/: input.csv
data/20-50-0.700000-11/: input.csv
data/20-50-0.700000-14/: input.csv
data/20-50-0.700000-15/: input.csv
data/20-50-0.700000-17/: input.csv
data/20-50-0.700000-18/: input.csv
data/20-50-0.700000-2/: input.csv
data/20-50-0.700000-23/: input.csv
data/20-50-0.700000-25/: input.csv
data/20-50-0.700000-26/: input.csv
data/20-50-0.700000-27/: input.csv
data/20-50-0.700000-30/: input.csv
data/20-50-0.700000-33/: input.csv
data/20-50-0.700000-34/: input.csv
data/20-50-0.700000-36/: input.csv
data/20-50-0.700000-37/: input.csv
data/20-50-0.700000-40/: input.csv
data/20-50-0.700000-42/: input.csv
data/20-50-0.700000-43/: input.csv
data/20-50-0.700000-44/: input.csv
data/20-50-0.700000-45/: input.csv
data/20-50-0.700000-47/: input.csv
data/20-50-0.700000-50/: input.csv
data/20-50-0.700000-51/: input.csv
data/20-50-0.700000-53/: input.csv
data/20-50-0.700000-54/: input.csv
data/20-50-0.700000-55/: input.csv
data/20-50-0.700000-57/: input.csv
data/20-50-0.700000-61/: input.csv
data/20-50-0.700000-65/: input.csv
data/20-50-0.700000-66/: input.csv
data/20-50-0.700000-67/: input.csv
data/20-50-0.700000-69/: input.csv
data/20-50-0.700000-73/: input.csv
data/20-50-0.700000-74/: input.csv
data/20-50-0.700000-75/: input.csv
data/20-50-0.700000-76/: input.csv
data/20-50-0.700000-78/: input.csv
data/20-50-0.700000-81/: input.csv
data/20-50-0.700000-82/: input.csv
data/20-50-0.700000-83/: input.csv
data/20-50-0.700000-84/: input.csv
data/20-50-0.700000-85/: input.csv
data/20-50-0.700000-9/: input.csv
data/20-50-0.700000-90/: input.csv
data/20-50-0.700000-95/: input.csv
data/20-50-0.700000-98/: input.csv
data_rejection/2/: input.csv
datasets/: input.csv  input_with_rejection.csv
parse_baruch_dataset/: Result.txt  index.js
src/: CMakeLists.txt  create_dataset.cpp  main.cpp  test_dataset.cpp  test_dataset_with_rejection.cpp  test_performance.cpp
src/algo/: dp_backtracking_solution.cpp  dp_solution.cpp  dp_solution.h  naive_solution.cpp
src/utils/: arrays.cpp  arrays.h  data.cpp  data.h  operators.cpp  readCSV.cpp  readCSV.h  stddev.h  timing.h  write_csv.cpp
src/utils/model/: Data.h  Job.cpp  Job.h  JobCollection.cpp  JobCollection.h  RejectableJob.cpp  RejectableJob.h  RejectableJobCollection.cpp  RejectableJobCollection.h
tests/: CMakeLists.txt  job_test.cpp  test_JobCollection.cpp  test_RejectableJob.cpp  test_RejectableJobCollection.cpp  test_dataset_with_rejection.cpp
utils/: arrays.cpp  data.cpp  operators.cpp  stddev.cpp  timing.cpp  write_csv.cpp
(+114 files in other folders)
